--- a/src/pages/lancamentosAdmin/style.module.css
+++ b/src/pages/lancamentosAdmin/style.module.css
@@ -7,7 +7,8 @@
   width: 100%;
   display: flex;
   justify-Content: space-between;
-  padding: 20px;
+  padding: 10px;
+  margin-top: 15px;
 }
 .tableClass{
   width: 80%;
